# coringa-mangrove

./: .gitignore  README.md  pyproject.toml
configs/: constants.py
notebooks/: 02_baseline_rf.ipynb  03_xgboost.ipynb  04_deeplab.ipynb
scripts/: run_all.py
src/: evaluate.py  train.py
src/data/: indices.py  loader.py  patches.py
src/models/: deeplabv3.py  random_forest.py  xgboost_model.py
