[project]
name = "coringa-mangrove"
version = "0.1.0"
description = "Comparative evaluation of ML algorithms for Coringa mangrove mapping"
requires-python = ">=3.9"
dependencies = [
    "earthengine-api>=0.1.370",
    "geemap>=0.32.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "segmentation-models-pytorch>=0.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.scripts]
run-all = "scripts.run_all:main"
